<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/darksky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dark_sky"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/weather_for"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/darksky" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:tint="@android:color/white"
        android:src="@drawable/default_weather"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textview_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/summary_textview"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_icon"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/summary"
        />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_textview"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:text="@string/temperature"
        />

    <TextView
        android:id="@+id/temp_high"
        android:textSize="20sp"
        android:text="@string/high"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/temp_low"
        android:textSize="15sp"
        android:text="@string/low"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/temp_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="15sp"
        android:text="@string/precipitation"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/precip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/precip"
        android:textSize="20sp"
        android:text="@string/precip_num"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</android.support.constraint.ConstraintLayout>